--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "illuminate/database": "~9.0",
         "illuminate/support": "~9.0",
         "ramsey/uuid": "^4",
-        "hanneskod/classtools": "~1.0"
+        "hanneskod/classtools": "dev-master"
     },
     "require-dev": {
         "illuminate/events": "~8.0",
